--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Stellar Unblocked</title>
+<title>Stellar Unblocked- Home</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -26,8 +26,7 @@ be different depending on context or style of pages and/or websites.
 <h1 style="color: #FFFFFF; font-family: Lexend;">Unblocked Games for School</h1>
 </font>
 <hr>
-<font size="7">
-<h1 style="color: #FFFFFF; font-family: Lexend;">Under Construction</h1>
+<a href="https://stellarunblocked.github.io/games/slope"><img src="https://stellarunblocked.github.io/img/slope.png" width="175px;"></a>
 </body>
 </html>
 
